[workspace]
resolver = "2"
members = [
    "crates/cradle-common",
    "crates/cradle-ebpf",
    "crates/cradle",
    "crates/cradle-cni",
    "crates/cradle-k8s",
    "bdd",
]
# The eBPF crates are built for `bpfel-unknown-none` by their loader's build
# script (via aya-build), never for the host, so they are excluded from the
# default set (host `cargo build` would otherwise fail on the no_main binary).
default-members = [
    "crates/cradle-common",
    "crates/cradle",
    "crates/cradle-cni",
    "crates/cradle-k8s",
]

[workspace.package]
version = "0.9.8"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.rs>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/cradle-rs/cradle-rs"

[workspace.dependencies]
# --- aya eBPF stack ---
aya = "0.14"
aya-ebpf = "0.2"
aya-log = "0.3"
aya-log-ebpf = "0.2"
aya-build = "0.2"
network-types = "0.2"

# --- internal ---
cradle-common = { path = "crates/cradle-common" }

# --- user-space ---
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["net"] }
socket2 = { version = "0.5", features = ["all"] }
regex = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"
clap = { version = "4", features = ["derive"] }
# Used by the offload loaders (env_logger/log/libc) and their eBPF crates'
# build scripts (which). default-features = false mirrors the offload trees'
# original declarations.
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
which = { version = "6.0.0", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.27", features = ["net", "time"] }
tonic = "0.14"
tonic-prost = "0.14"
prost-types = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"

# Optimize the eBPF object even in dev builds; the verifier rejects most
# unoptimized output.
[profile.dev.package.cradle-ebpf]
opt-level = 3

[profile.release.package.cradle-ebpf]
debug = 2
codegen-units = 1
