[package]
name = "cradle-bdd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BDD (cucumber) tests for cradle-rs over network namespaces"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "time"] }

[dev-dependencies]
serde_json = "1"
cucumber = { version = "0.23", features = ["output-json"] }
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
