[package]
name = "cradle-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes controller for cradle-rs: maps Services/EndpointSlices onto the eBPF L4 load balancer and renders the node CNI config"

[[bin]]
name = "cradle-k8s"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", default-features = false, features = ["client", "runtime", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
anyhow = { workspace = true }
