[package]
name = "cradle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "cradle-rs user-space control plane: loads/attaches the eBPF data plane and programs its maps"
default-run = "cradle"

[[bin]]
name = "cradle"
path = "src/main.rs"

[dependencies]
cradle-common = { workspace = true, features = ["user"] }
aya = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
aya-build = { workspace = true }
anyhow = { workspace = true }
